src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Picklist__c</fullName>
        <label>Agency</label>
        <picklist>
            <picklistValues>
                <fullName>CLEER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EcoAction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERC Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERC Alamosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walking Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yampa Valley</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Agency__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aid_to_the_Blind_AB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aid to the Blind (AB)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aid_to_the_Needy_Disabled_AND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aid to the Needy Disabled (AND)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Household_Income_PreTax__c</fullName>
        <label>Annual Household Income Pre-Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Household_Income_Pre_Tax__c</fullName>
        <inlineHelpText>Annual Household Income Pre-Tax (Entire household income must be represented)</inlineHelpText>
        <label>Annual Household Income Pre-Tax</label>
        <summarizedField>Household_Members__c.Income_Per_Year_for_Individual__c</summarizedField>
        <summaryForeignKey>Household_Members__c.Project2__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Applicant_First_Name__c</fullName>
        <label>Applicant First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Last_Name__c</fullName>
        <label>Applicant Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Priority List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Cost__c</fullName>
        <formula>IF(TEXT(Audit_Type__c) = &quot;Audit w/ Blower Door ($300)&quot;,300,
IF(TEXT(Audit_Type__c) = &quot;Audit w/out Blower Door ($200)&quot;,200,
IF(TEXT(Audit_Type__c) = &quot;No Audit Cost&quot;,0,
0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Audit_Type__c</fullName>
        <label>Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Audit w/ Blower Door ($300)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit w/out Blower Door ($200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Audit Cost</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorization_Complete__c</fullName>
        <label>Authorization Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Daytime_Phone__c</fullName>
        <label>Daytime Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <label>Disabled</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ElectricUtilityProvider__c</fullName>
        <label>Electric Utility Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Xcel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holy Cross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Hills Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YVEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of Gunnison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County of Gunnison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPEA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electric_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electric Provider</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must be an electric utility provider</errorMessage>
            <filterItems>
                <field>Utility_Provider__c.Utility_Type__c</field>
                <operation>equals</operation>
                <value>Electric, Gas &amp; Electric</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Provider__c</referenceTo>
        <relationshipLabel>Projects (Electric Provider)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electric_Utility_Account__c</fullName>
        <label>Electric Utility Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electric_Utility_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electric Utility Provider</label>
        <referenceTo>Utility_Provider__c</referenceTo>
        <relationshipLabel>Projects (Electric Utility Provider)</relationshipLabel>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employed__c</fullName>
        <label>Employed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evening_Phone__c</fullName>
        <label>Evening Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_Stamps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food Stamps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gas_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gas Provider</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must be a Gas Utility Provider</errorMessage>
            <filterItems>
                <field>Utility_Provider__c.Utility_Type__c</field>
                <operation>equals</operation>
                <value>Gas, Gas &amp; Electric</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Provider__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gas_Utility_Provider__c</fullName>
        <label>Gas Utility Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Atmos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Hills Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xcel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRPA Gas</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_the_home_been_weatherized_in_the_pas__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the home been weatherized in the past 10 years?</inlineHelpText>
        <label>Weatherized Past 10 Years?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing_Type__c</fullName>
        <label>Housing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Not Reported</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Driver_s_License2__c</fullName>
        <label>ID/Driver&apos;s License #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Driver_s_License__c</fullName>
        <label>ID/Driver&apos;s License #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Rental_has_Landlord_signed_off__c</fullName>
        <inlineHelpText>If Rental, has Landlord signed off on the application?</inlineHelpText>
        <label>If Rental, has Landlord signed off?</label>
        <picklist>
            <controllingField>Own_or_Rent__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LEAP_Status__c</fullName>
        <label>LEAP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Received LEAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied LEAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEAP Closed (May-October)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not apply for LEAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Eligible for LEAP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Landlord_Approval__c</fullName>
        <label>Landlord Approval</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_if_different_than_above__c</fullName>
        <inlineHelpText>Mailing Address (if different than above)</inlineHelpText>
        <label>Mailing Address (if different than above</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_County__c</fullName>
        <label>Mailing County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip__c</fullName>
        <label>Mailing Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Natural_Gas_or_Propane_Utility_Account__c</fullName>
        <label>Natural Gas or Propane Utility Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Adults__c</fullName>
        <label>Number of Adults in Household</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Adults_in_Household__c</fullName>
        <label>Number of Adults in Household</label>
        <summaryFilterItems>
            <field>Household_Members__c.Age_of_Individual__c</field>
            <operation>greaterOrEqual</operation>
            <value>18</value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Members__c.Project2__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Auditor_Installs_Completed__c</fullName>
        <label>Number of Auditor Installs Completed</label>
        <summaryFilterItems>
            <field>Install__c.Total_Number_of_Rebates_Earned__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Install__c.Auditor_or_Contractor__c</field>
            <operation>equals</operation>
            <value>Auditor Install</value>
        </summaryFilterItems>
        <summaryForeignKey>Install__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <label>Number of Children in Household</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Children_in_Household__c</fullName>
        <label>Number of Children in Household</label>
        <summaryFilterItems>
            <field>Household_Members__c.Age_of_Individual__c</field>
            <operation>lessThan</operation>
            <value>18</value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Members__c.Project2__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Completed_Installations__c</fullName>
        <label>Number of Completed Installations</label>
        <summaryFilterItems>
            <field>Install__c.Total_Number_of_Rebates_Earned__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Install__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Contractor_Installs_Completed__c</fullName>
        <label>Number of Contractor Installs Completed</label>
        <summaryFilterItems>
            <field>Install__c.Total_Number_of_Rebates_Earned__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Install__c.Auditor_or_Contractor__c</field>
            <operation>equals</operation>
            <value>Contractor Install</value>
        </summaryFilterItems>
        <summaryForeignKey>Install__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_People_Over_Age_65__c</fullName>
        <label>Number of People Over Age 65</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_People_with_a_Disability__c</fullName>
        <label>Number of People with a Disability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Potential_Installations__c</fullName>
        <label>Number of Potential Installations</label>
        <summaryForeignKey>Install__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Old_Age_Pension_OAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old Age Pension (OAP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Household_Assistance__c</fullName>
        <label>Other Household Assistance</label>
        <picklist>
            <picklistValues>
                <fullName>Aid to the Blind (AB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aid to the Needy Disabled (AND)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Stamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old Age Pension (OAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Security (SSI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Security Disability Income (SSDI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplemental Security Income (SSI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 8 Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Women, Infants, and Children (WIC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Aid to Needy Families (TANF)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Own_or_Rent__c</fullName>
        <label>Own or Rent</label>
        <picklist>
            <picklistValues>
                <fullName>Own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Propane_Utility_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Natural Gas or Propane Utility Provider</label>
        <referenceTo>Utility_Provider__c</referenceTo>
        <relationshipLabel>Projects (Natural Gas or Propane Utility Provider)</relationshipLabel>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Utility_Account_Holder__c</fullName>
        <label>Relationship to Utility Account Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_8_Housing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section 8 Housing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Address__c</fullName>
        <label>Service Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Disability_Income_SSDI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Security Disability Income (SSDI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Security_SSI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Security (SSI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Space_Heat_Source__c</fullName>
        <label>Space Heat Source</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplemental_Security_Income_SSI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplemental Security Income (SSI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temporary_Aid_to_Needy_Families_TANF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary Aid to Needy Families (TANF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_CARE_Program_Cost__c</fullName>
        <formula>Total_Install_Cost__c +  Audit_Cost__c  -  Total_Rebates_Earned__c - Total_Leveraged_Funding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CARE Program Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Install_Cost__c</fullName>
        <label>Total Install Cost</label>
        <summarizedField>Install__c.Install_Cost__c</summarizedField>
        <summaryForeignKey>Install__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Leveraged_Funding__c</fullName>
        <label>Total Leveraged Funding</label>
        <summarizedField>Install__c.Total_Leveraged_Funding_Utilitized__c</summarizedField>
        <summaryForeignKey>Install__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Rebates_Earned__c</fullName>
        <label>Total Number of Rebates Earned</label>
        <summarizedField>Install__c.Total_Number_of_Rebates_Earned__c</summarizedField>
        <summaryForeignKey>Install__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rebates_Earned__c</fullName>
        <label>Total Rebates Earned</label>
        <summarizedField>Install__c.Total_Rebates_Earned__c</summarizedField>
        <summaryForeignKey>Install__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_of_Domestic_Hot_Water_Heating_Fuel__c</fullName>
        <inlineHelpText>Type of Domestic Hot Water Heating Fuel Source</inlineHelpText>
        <label>Type of Domestic Hot Water Heating Fuel</label>
        <picklist>
            <picklistValues>
                <fullName>Gas or Propane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Space_Heating_Fuel_Source__c</fullName>
        <label>Type of Space Heating Fuel Source</label>
        <picklist>
            <picklistValues>
                <fullName>Gas or Propane Furnace/Boiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Water_Heat_Source__c</fullName>
        <label>Water Heat Source</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Women_Infants_and_Children_WIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Women, Infants, and Children (WIC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Number_of_Rebates_Earned__c</columns>
        <columns>Gas_Provider__c</columns>
        <columns>Gas_Utility_Provider__c</columns>
        <columns>Electric_Provider__c</columns>
        <columns>Electric_Utility_Provider__c</columns>
        <columns>ElectricUtilityProvider__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Yampa_Valley_Projects</fullName>
        <columns>NAME</columns>
        <columns>Approved__c</columns>
        <columns>Authorization_Complete__c</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>Housing_Type__c</columns>
        <columns>Agency__c</columns>
        <columns>Electric_Provider__c</columns>
        <columns>Gas_Provider__c</columns>
        <columns>Number_of_Completed_Installations__c</columns>
        <filterScope>Mine</filterScope>
        <label>Yampa Valley Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>